--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   url_launcher: ^6.2.6
   flutter_overlay_window: ^0.4.4
+  external_app_launcher: ^4.0.0
 
 dev_dependencies:
   flutter_test:
